--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Bem vindo ao meu site</h1>
     <p>Este site é para minhas aulas</p>
+    <img src="imgs/perfil.jpeg" alt="Sou eu a Dani" width="150px">
 </body>
 
 </html>
