--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <h1>Bem vindo ao meu site</h1>
     <p>Este site é para minhas aulas</p>
     <img src="imgs/perfil.jpeg" alt="Sou eu a Dani" width="150px">
+    <br>
+    
+    <a href="https://www.instagram.com/invites/contact/?i=1u8b7u7ghmh9o&utm_content=cr3vhho">
+        <img src="imgs/instagram.jpeg" alt="Somos mais lindas" width="80px">   
+    </a>
+    
 </body>
 
 </html>
