--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <p>Este site é para minhas aulas</p>
     <img src="imgs/perfil.jpeg" alt="Sou eu a Dani" width="150px">
     <br>
-    
-    <a href="https://www.instagram.com/invites/contact/?i=1u8b7u7ghmh9o&utm_content=cr3vhho">
+
+    <a 
+        href="https://www.instagram.com/invites/contact/?i=1u8b7u7ghmh9o&utm_content=cr3vhho"
+        target="_blank"
+    >
         <img src="imgs/instagram.jpeg" alt="Somos mais lindas" width="80px">   
     </a>
     
