--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>site da Dany</title>
+    <title>Site da Dany</title>
 </head>
 
 <body>
-    <h1>Bem vindo ao meu site</h1>
-    <p>Este site é para minhas aulas</p>
+    <h1>Bem vindo ao meu site!</h1>
+    <p>Este site é para minhas aulas.</p>
     <img src="imgs/perfil.jpeg" alt="Sou eu a Dani" width="150px">
     <br>
 
